[gd_scene load_steps=27 format=3 uid="uid://bxe376frrevrf"]

[ext_resource type="Script" path="res://scripts/irritus.gd" id="1_3o7hq"]
[ext_resource type="Shader" uid="uid://ba4x50f4o2nba" path="res://shaders/blink.tres" id="2_l4048"]
[ext_resource type="Texture2D" uid="uid://clrwy5nyhdex6" path="res://assets/sprites/enemies/irritus/irritus_idle_sheet.png" id="3_8etjg"]
[ext_resource type="Texture2D" uid="uid://4583yrsgdw6r" path="res://assets/sprites/enemies/irritus/irritus_jump_sprite.png" id="4_860k1"]
[ext_resource type="Texture2D" uid="uid://dck0ni3ptvnh5" path="res://assets/sprites/enemies/irritus/irritus_run_sheet.png" id="5_y0wf8"]
[ext_resource type="PackedScene" uid="uid://cj5ky0bvhedwe" path="res://scenes/player/hurt_player_area.tscn" id="6_sfiq4"]
[ext_resource type="PackedScene" uid="uid://honmn2s1smfo" path="res://scenes/enemies/enemy_healthbar.tscn" id="7_kkao4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ji213"]
resource_local_to_scene = true
shader = ExtResource("2_l4048")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysxay"]
atlas = ExtResource("3_8etjg")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_csnd8"]
atlas = ExtResource("3_8etjg")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1jmt"]
atlas = ExtResource("3_8etjg")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ato1h"]
atlas = ExtResource("3_8etjg")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f68ci"]
atlas = ExtResource("3_8etjg")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wj7g"]
atlas = ExtResource("4_860k1")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyj2n"]
atlas = ExtResource("5_y0wf8")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_273t3"]
atlas = ExtResource("5_y0wf8")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i08f6"]
atlas = ExtResource("5_y0wf8")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwr1x"]
atlas = ExtResource("5_y0wf8")
region = Rect2(48, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_47d34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysxay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csnd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1jmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ato1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f68ci")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wj7g")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyj2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_273t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i08f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwr1x")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gfx5x"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5jea4"]
radius = 79.0

[sub_resource type="Animation" id="Animation_37y7c"]
length = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedIrritusSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedIrritusSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7ssvu"]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedIrritusSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedIrritusSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8rcyp"]
resource_name = "hurt_blink"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedIrritusSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedIrritusSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0.92549, 0.152941, 0.247059, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31xmi"]
_data = {
"RESET": SubResource("Animation_37y7c"),
"blink": SubResource("Animation_7ssvu"),
"hurt_blink": SubResource("Animation_8rcyp")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_uc10q"]
radius = 14.0

[node name="irritus" type="CharacterBody2D" groups=["enemies"]]
z_index = 4
collision_layer = 8
collision_mask = 16
script = ExtResource("1_3o7hq")

[node name="AnimatedIrritusSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ji213")
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_47d34")
animation = &"jump"
autoplay = "idle"

[node name="IrritusCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
rotation = 1.5708
shape = SubResource("CircleShape2D_gfx5x")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(6, 0)
collision_mask = 16

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(-6, 0)
collision_mask = 16

[node name="ChasePlayer" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="DetectionCollider" type="CollisionShape2D" parent="ChasePlayer"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_5jea4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_31xmi")
}

[node name="HurtPlayerArea" parent="." instance=ExtResource("6_sfiq4")]
position = Vector2(0, -5)
scale = Vector2(0.5, 0.5)
damage = 12
knock_back_force = 55

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtPlayerArea"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_uc10q")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="RoamTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05

[node name="enemy_healthbar" parent="." instance=ExtResource("7_kkao4")]
position = Vector2(0, -16)

[connection signal="body_entered" from="ChasePlayer" to="." method="_on_chase_player_body_entered"]
[connection signal="body_exited" from="ChasePlayer" to="." method="_on_chase_player_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="RoamTimer" to="." method="_on_change_state_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
